# sweet

./: .gitignore  CMakeLists.txt  LICENSE
module/: GetFiles.cmake  add_include_directories.cmake  add_source_files.cmake  request_package.cmake
src/: CMakeLists.txt
src/common/: alias.hpp  color.cpp  color.hpp  direction.hpp  parallel.hpp  point.hpp  rect.hpp  size.hpp  type_provider.hpp  version.hpp
src/core/: app.cpp  app.hpp  frame.cpp  frame.hpp  frame_monitor.cpp  frame_monitor.hpp  renderer.cpp  renderer.hpp  resource.hpp  window.cpp  window.hpp
src/graphics/: blend_mode.hpp  box.cpp  box.hpp  font.cpp  font.hpp  scale_mode.hpp  texture.cpp  texture.hpp
src/input/: game_controller.cpp  game_controller.hpp  game_controller_manager.cpp  game_controller_manager.hpp  gamecontroller.cpp  gamecontroller.hpp  gamecontroller_manager.cpp  gamecontroller_manager.hpp  keyboard.cpp  keyboard.hpp
src/resource/: parallel_resource_chunk.hpp  parallel_resource_loader.hpp  resource.cpp  resource.hpp  resource_bundle.hpp  resource_chunk.hpp  resource_loader.hpp  resource_manager.hpp
src/scene/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
test/: CMakeLists.txt  box_test.hpp  font_test.cpp  font_test.hpp  game_controller_test.cpp  game_controller_test.hpp  gamecontroller_test.hpp  keyboard_test.cpp  keyboard_test.hpp  main.cpp  main.hpp  resource_bundle_test.cpp  resource_bundle_test.hpp  resource_manager_test.cpp  resource_manager_test.hpp  test.hpp  texture_test.cpp  texture_test.hpp
