cmake_minimum_required(VERSION 3.20)

project(sweet LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/module)

include(add_include_directories)
include(add_source_files)
include(request_package)

request_package(SDL2 "SDL2 package not found.")
request_package(SDL2_image "SDL2_image package not found.")
request_package(SDL2_ttf "SDL2_image package not found.")

if(CMAKE_BUILD_TYPE STREQUAL "")
  set(CMAKE_BUILD_TYPE "Debug")
  set(CMAKE_BUILD_TYPE_LOWER "debug")
else()
  string(TOLOWER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE_LOWER)
endif()

if(CMAKE_BUILD_TYPE_LOWER STREQUAL "release")
  add_subdirectory(src)

  file(GLOB SUBDIRECTORIES LIST_DIRECTORIES ON ${PROJECT_SOURCE_DIR}/src/*)
  file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
  foreach(DIRECTORY ${SUBDIRECTORIES})
    if(IS_DIRECTORY ${DIRECTORY})
      file(GLOB HEADER_FILES ${DIRECTORY}/**.hpp)
      foreach(FILE ${HEADER_FILES})
        configure_file(${FILE} ${CMAKE_BINARY_DIR}/include)
      endforeach()
    endif()
  endforeach()
else()
  add_subdirectory(src)
  add_subdirectory(test)
endif()
